Fix overflow issue, svg clipping

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,7 @@ html {
   color: $black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 .rotate {
